# pokemon-files-js

./: .eslintrc.json  .gitignore  .prettierrc.yaml  Makefile  README.md  eslint.config.mjs  go.mod  package-lock.json  package.json  tsconfig.json
conversions/: GameboyStringEncoding.json  Gen1PokemonIndex.json  Gen3PokemonIndex.json  Gen3StringEncoding.json  Gen4StringEncoding.json  SVPokemonIndex.json
rust/: Cargo.toml  build.rs  jumpluff.pk2
rust/src/: conversion.rs  lib.rs  main.rs  pkm.rs
rust/src/conversion/: Gen1PokemonIndex.rs  Gen3PokemonIndex.rs  Gen3StringEncoding.rs  SVPokemonIndex.rs  gameboy_string_encoding.rs  gen1_pokemon_index.rs  gen3_pokemon_index.rs  gen3_string_encoding.rs  gen4_string_encoding.rs  sv_pokemon_index.rs
rust/src/pkm/: colopkm.rs  markings.rs  pa8.rs  pb7.rs  pb8.rs  pk1.rs  pk2.rs  pk3.rs  pk4.rs  pk5.rs  pk6.rs  pk7.rs  pk8.rs  pk9.rs  pkm.rs  strings.rs  test.rs  types.rs  util.rs  xdpkm.rs
rust/src/pkm/strings/: gen5.rs  utf16.rs
rust/src/text-resources/items/: gen1.rs  gen2.rs  gen3.rs  gen3col.rs  gen3xd.rs  items.rs
rust/wasm_test/: import_map.json  test.ts
src/__test__/: bytes.test.ts  fields.test.ts
src/conversion/: index.ts
src/pkm/: COLOPKM.ts  PA8.ts  PB7.ts  PB8.ts  PK1.ts  PK2.ts  PK3.ts  PK4.ts  PK5.ts  PK6.ts  PK7.ts  PK8.ts  PK9.ts  XDPKM.ts  fileImport.ts  index.ts
src/schema/: PA8.json  PB7.json  PB8.json  PK3.json  PK6.json  PK7.json  PK8.json  PK9.json  index.ts
src/util/: byteLogic.ts  encryption.ts  genderCalc.ts  pkmInterface.ts  ribbonLogic.ts  statCalc.ts  stringConversion.ts  types.ts  (+1 more)
(+3 files in other folders)
