[package]
name = "RustPKM"
version = "0.0.1"
authors = ["Andrew Benington"]
edition = "2021"


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
num = "0.4.3"