[package]
name = "pokemon-files-rs"
version = "0.0.1"
authors = ["Andrew Benington"]
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.140"
num = "0.4.3"
toml = "0.8.23"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.5"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.134"